# PythonAIML

./: .gitattributes  .gitignore  NOTEBOOK_RULES.md  README.md  create_folders.ipynb  requirements.txt
00_repo_guide/: README.md  repo_map.md  study_plan.md
01_python_fundamentals/: 01_where_python_starts.ipynb  02_names_are_not_boxes.ipynb  03_object_lifetime_memory_and_gc.ipynb  04_numbers_bits_truth_and_precision.ipynb  05_strings_text_and_unicode_without_mystery.ipynb  06_lists_tuples_and_slicing_with_runtime_eyes.ipynb  README.md  (+18 more)
12_Agentic/03-CrewAI/community_contributions/1_swap_trading_prism/: pyproject.toml
12_Agentic/03-CrewAI/community_contributions/1_swap_trading_prism/src/prism/: __init__.py  database.py
13_Agentic/03-CrewAI/community_contributions/modular_code_gen/: README.md  pyproject.toml
13_Agentic/03-CrewAI/community_contributions/modular_code_gen/account_directory/: account_module.py  accounts.py  portfolio_module.py  share_price_module.py  transaction_module.py
13_Agentic/03-CrewAI/community_contributions/modular_code_gen/src/modular_code_gen/config/: agents.yaml  tasks.yaml
13_Agentic/03-CrewAI/community_contributions/modular_code_gen/src/modular_code_gen/tools/: file_saver.py
13_Agentic/03-CrewAI/community_contributions/software_team_flow_ui_no_code_docker_run/: .gitignore  README.md  pyproject.toml  ui.py
13_Agentic/03-CrewAI/community_contributions/software_team_flow_ui_no_code_docker_run/src/software_team_flow_ui_no_code_docker_run/crews/code_crew/: __init__.py
13_Agentic/03-CrewAI/community_contributions/software_team_flow_ui_no_code_docker_run/src/software_team_flow_ui_no_code_docker_run/crews/design_crew/: design_crew.py
13_Agentic/03-CrewAI/community_contributions/software_team_flow_ui_no_code_docker_run/src/software_team_flow_ui_no_code_docker_run/crews/design_crew/config/: agents.yaml  tasks.yaml
13_Agentic/03-CrewAI/community_contributions/software_team_flow_ui_no_code_docker_run/src/software_team_flow_ui_no_code_docker_run/crews/ui_crew/config/: tasks.yaml
13_Agentic/03-CrewAI/community_contributions/software_team_flow_ui_no_code_docker_run/src/software_team_flow_ui_no_code_docker_run/crews/zip_crew/: __init__.py
13_Agentic/03-CrewAI/community_contributions/software_team_flow_ui_no_code_docker_run/src/software_team_flow_ui_no_code_docker_run/crews/zip_crew/config/: agents.yaml  tasks.yaml
13_Agentic/03-CrewAI/community_contributions/software_team_flow_ui_no_code_docker_run/src/software_team_flow_ui_no_code_docker_run/tools/: zip_tool.py
13_Agentic/04-LangGraph/community_contributions/sidekick-Personal-CoWorker-refactored-AzureOpenAI/: .env.example  .gitignore  README.md  pyproject.toml  sidekick.py  sidekick_tools.py
ai/: README.md
(+1138 files in other folders)
